<resources>
    <string name="app_name">RU Pizzeria</string>
    <string name="activity2_name">Customize Your Pizza Order!</string>
    <string name="pepPizza">Pepperoni Pizza</string>
    <string name="deluxePizza">Deluxe Pizza</string>
    <string name="hawaiianPizza">Hawaiian Pizza</string>
    <string name="textview">TextView</string>
    <string name="total_amount">Total Amount: $</string>
    <string name="salestaxamount">0.00</string>
    <string name="sales_tax">Sales Tax:</string>
    <string name="pizza_order">Your Pizza Order!</string>
    <string name="subtotalamount">0.00</string>
    <string name="remove_pizza">Remove Pizza</string>
    <string name="placeorderbutton">placeOrderButton</string>
    <string name="activity3_name">Order Your Pizza</string>
    <string name="activity4_name">RU Pizzeria Orders</string>
    <string name="pineapple">Pineapple</string>
    <string name="chicken">Chicken</string>
    <string name="greenpeppers">GreenPeppers</string>
    <string name="ham">Ham</string>
    <string name="spinach">Spinach</string>
    <string name="olives">Olives</string>
    <string name="onions">Onions</string>
    <string name="pepperoni">Pepperoni</string>
    <string name="your_style_of_pizza">Your style of pizza!</string>
    <string name="order_total">Order Total: $</string>
    <string name="add_to_order">Add to Order</string>
    <string name="tomatoes">Tomatoes</string>
    <string name="totalAmountText">0.00</string>
    <string name="mushrooms">Mushrooms</string>
    <string name="place_order">Place Order</string>
    <string name="hawaiian_pizza">Hawaiian Pizza</string>
    <string name="deluxe_pizza">Deluxe Pizza</string>
    <string name="pepperoni_pizza">Pepperoni Pizza</string>
    <string name="ru_pizzeria">RU PIZZERIA</string>
    <string name="customer_phone_number">Customer Phone Number:</string>
    <string name="store_orders">Store Orders</string>
    <string name="checkout_order">Checkout Order</string>
    <string name="customer_number">Customer Phone Number</string>
    <string name="order_phone_number">Order Phone Number:</string>
    <string name="sales_tax_string">Sales Tax: $</string>
    <string name="subtotal">Subtotal: $</string>
    <string name="cancel_order">Cancel Order</string>
    <string name="_0_00">0.00</string>

    <string-array name="sizes">
        <item>Small</item>
        <item>Medium</item>
        <item>Large</item>
    </string-array>
</resources>