<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <CheckBox
        android:id="@+id/pineappleButton"
        android:layout_width="169dp"
        android:layout_height="50dp"
        android:layout_marginBottom="256dp"
        android:text="@string/pineapple"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.14"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pepperoniButton"
        app:layout_constraintVertical_bias="0.0" />

    <CheckBox
        android:id="@+id/greenPeppersButton"
        android:layout_width="169dp"
        android:layout_height="50dp"
        android:layout_marginBottom="204dp"
        android:text="@string/greenpeppers"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.14"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pineappleButton"
        app:layout_constraintVertical_bias="0.0" />

    <CheckBox
        android:id="@+id/hamButton"
        android:layout_width="169dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="352dp"
        android:text="@string/ham"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/pepperoniButton"
        app:layout_constraintTop_toBottomOf="@+id/sizeSpinner"
        app:layout_constraintVertical_bias="1.0" />

    <CheckBox
        android:id="@+id/spinachButton"
        android:layout_width="169dp"
        android:layout_height="50dp"
        android:layout_marginBottom="252dp"
        android:text="@string/spinach"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/pineappleButton"
        app:layout_constraintTop_toBottomOf="@+id/hamButton"
        app:layout_constraintVertical_bias="0.0" />

    <CheckBox
        android:id="@+id/olivesButton"
        android:layout_width="169dp"
        android:layout_height="50dp"
        android:layout_marginBottom="280dp"
        android:text="@string/olives"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/greenPeppersButton"
        app:layout_constraintTop_toBottomOf="@+id/spinachButton"
        app:layout_constraintVertical_bias="0.0" />

    <CheckBox
        android:id="@+id/onionsButton"
        android:layout_width="169dp"
        android:layout_height="50dp"
        android:layout_marginBottom="152dp"
        android:text="@string/onions"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.14"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/greenPeppersButton"
        app:layout_constraintVertical_bias="0.0" />

    <CheckBox
        android:id="@+id/chickenButton"
        android:layout_width="169dp"
        android:layout_height="50dp"
        android:layout_marginBottom="152dp"
        android:text="@string/chicken"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/onionsButton"
        app:layout_constraintTop_toBottomOf="@+id/olivesButton"
        app:layout_constraintVertical_bias="0.0" />

    <CheckBox
        android:id="@+id/pepperoniButton"
        android:layout_width="170dp"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="352dp"
        android:text="@string/pepperoni"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.136"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sizeSpinner"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="126dp"
        android:layout_height="123dp"
        android:contentDescription="@string/your_style_of_pizza"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.113"
        app:srcCompat="?attr/selectableItemBackground" />

    <TextView
        android:id="@+id/pizzaType"
        android:layout_width="239dp"
        android:layout_height="27dp"
        android:fontFamily="serif"
        android:text="@string/textview"
        android:textAlignment="center"
        android:textColor="#398ACA"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/mushroomsButton"
        android:layout_width="169dp"
        android:layout_height="50dp"
        android:layout_marginBottom="88dp"
        android:text="@string/mushrooms"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.14"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/onionsButton"
        app:layout_constraintVertical_bias="0.021" />

    <CheckBox
        android:id="@+id/tomatoesButton"
        android:layout_width="169dp"
        android:layout_height="50dp"
        android:layout_marginBottom="100dp"
        android:text="@string/tomatoes"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/mushroomsButton"
        app:layout_constraintTop_toBottomOf="@+id/chickenButton"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/totalDisplay"
        android:layout_width="179dp"
        android:layout_height="23dp"
        android:textColor="#EA0606"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.879"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tomatoesButton"
        app:layout_constraintVertical_bias="0.302" />

    <TextView
        android:id="@+id/orderTotalAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/order_total"
        android:textColor="#EC0909"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/totalDisplay"
        app:layout_constraintHorizontal_bias="0.935"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mushroomsButton"
        app:layout_constraintVertical_bias="0.289" />

    <Button
        android:id="@+id/addToOrderButton"
        android:layout_width="133dp"
        android:layout_height="57dp"
        android:backgroundTint="#D10A4E"
        android:text="@string/add_to_order"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/totalDisplay" />

    <Spinner
        android:id="@+id/sizeSpinner"
        android:layout_width="209dp"
        android:layout_height="41dp"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>