<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageButton
        android:id="@+id/hawaiianPizza"
        android:layout_width="104dp"
        android:layout_height="118dp"
        android:layout_marginEnd="12dp"
        android:contentDescription="@string/hawaiian_pizza"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.152"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.141"
        app:srcCompat="@mipmap/ic_launcher_foreground"
        tools:ignore="SpeakableTextPresentCheck,ImageContrastCheck" />

    <ImageButton
        android:id="@+id/deluxePizza"
        android:layout_width="103dp"
        android:layout_height="119dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="4dp"
        android:clickable="true"
        android:contentDescription="@string/deluxe_pizza"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.148"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hawaiianPizza"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@mipmap/deluxe"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/titleOfPizzeria"
        android:layout_width="145dp"
        android:layout_height="24dp"
        android:fontFamily="serif-monospace"
        android:text="@string/ru_pizzeria"
        android:textAlignment="center"
        android:textColor="#D30E0E"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.056" />

    <ImageButton
        android:id="@+id/pepperoniPizza"
        android:layout_width="104dp"
        android:layout_height="115dp"
        android:contentDescription="@string/pepperoni_pizza"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.146"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/deluxePizza"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@mipmap/pepperoni" />

    <TextView
        android:id="@+id/customerText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:text="@string/customer_phone_number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.79" />

    <ImageButton
        android:id="@+id/orderPizzas"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:contentDescription="@string/checkout_order"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.886"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/storeOrderButton"
        app:layout_constraintVertical_bias="0.285"
        app:srcCompat="@mipmap/cart"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageButton
        android:id="@+id/storeOrderButton"
        android:layout_width="116dp"
        android:layout_height="107dp"
        android:contentDescription="@string/store_orders"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.874"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.184"
        app:srcCompat="@mipmap/storeicon"
        tools:ignore="SpeakableTextPresentCheck" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/customerText"
        app:layout_constraintVertical_bias="0.213">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/customer_number"
            tools:ignore="TextContrastCheck,TextContrastCheck,TouchTargetSizeCheck" />
    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>