<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/orderTotalText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/order_total"
        android:textColor="#673AB7"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/cancelOrderButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.365"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/storeOrderText"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/storeOrderText"
        android:layout_width="187dp"
        android:layout_height="24dp"
        android:layout_marginTop="32dp"
        android:fontFamily="monospace"
        android:text="@string/store_orders"
        android:textAlignment="center"
        android:textColor="#279F2C"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/cancelOrderButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.003" />

    <Spinner
        android:id="@+id/phoneNumbers"
        android:layout_width="237dp"
        android:layout_height="28dp"
        android:layout_marginTop="28dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/orderTotalText"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

    <ListView
        android:id="@+id/storeOrderList"
        android:layout_width="371dp"
        android:layout_height="340dp"
        android:layout_marginTop="36dp"
        app:layout_constraintBottom_toTopOf="@+id/cancelOrderButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.444"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phoneNumbers"
        app:layout_constraintVertical_bias="0.181" />

    <Button
        android:id="@+id/cancelOrderButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="52dp"
        android:backgroundTint="#FFC107"
        android:text="@string/cancel_order"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/storeOrderTotalAmount"
        android:layout_width="122dp"
        android:layout_height="18dp"
        android:text="@string/_0_00"
        android:textColor="#673AB7"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/phoneNumbers"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/orderTotalText"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.75" />
</androidx.constraintlayout.widget.ConstraintLayout>